# pcode-sans

./: .gitignore  binary_function.py  cfg.py  engine_types.py  fast_elf.py  main.py  memory_access.py  pcode_engine.py  project.py  pyproject.toml  symbol_table.py
tests/: conftest.py  helpers.py  test_binary_function.py  test_binary_op.py  test_engine.py
tests/engine/: test_arm.py  test_callsites.py  test_data_flow.py  test_loops.py  test_memory_access.py  test_mips.py
