[project]
name = "pcode-sans"
version = "0.1.0"
description = "P-Code static analysis engine for binary functions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "igraph>=1.0.0",
    "pypcode",
    "frozendict",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | build
  | dist
)/
'''
